--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "firebase": "^10.12.3",
+    "list": "^2.0.19",
+    "npm": "^10.8.2",
+    "vue": "^3.2.13",
+    "vue-clipboard3": "^2.0.0",
+    "vue3-clipboard": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   },
