--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^10.12.3",
     "list": "^2.0.19",
     "npm": "^10.8.2",
+    "random-words": "^2.0.1",
     "vue": "^3.2.13",
     "vue-clipboard3": "^2.0.0",
     "vue3-clipboard": "^1.0.0"
